--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <link rel="stylesheet" href="/style.css" type="text/css">
 <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600&display=swap" rel="stylesheet">
 <main></main>
+<script src="/script.js"></script>
 <script src="/bundle.js"></script>
